--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	runtimeOnly 'org.postgresql:postgresql'
 	// end::tests[]
+	implementation 'org.springframework:spring-aspects:6.1.8'
 }
 
 test {
